# phoskintime

./: .env  .gitignore  404.html  CHANGELOG.md  Dockerfile  LOG.md  Manifest.toml  PYPI_README.md  Project.toml  README.md  TODO.md  __init__.py  __main__.py  config.toml  config_loader.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  reference.html  requirements.txt  run_dashboard.py  search.html  sitemap.xml
.github/: AUDIT_REPORT.md
.github/workflows/: deploy-docs.yml  publish.yml  python.yml  test.yml
Documentation/: CHANGELOG.html
Documentation/config/: index.html
Documentation/global/: index.html
Documentation/identifiability/: index.html
Documentation/kinopt/: index.html
Documentation/knockout/: index.html
Documentation/models/: index.html
Documentation/paramest/: index.html
Documentation/plotting/: index.html
abopt/: README.md  main.py
app/: kinopt.py  tfopt.py
background/: README.md
config/: README.md  cli.py  config.py  constants.py  env_loader.py  logconf.py  logging_config.py
data/: optimization_results.xlsx
docs/: index.md  reference.md
estimation/: adaptive_estimation.py  core.py  estimation.py  fit.py
frechet/: __init__.py  distance.py
global_model/: INTERPRETATION.md  __init__.py  analysis.py  buildmat.py  cache.py  config.py  dashboard.py  dashboard_app.py  dashboard_bundle.py  export.py  global_model.py  global_model_evol.py  global_model_v2.py  global_model_v3.py  global_model_v4.py  global_model_v5.py  global_model_w_alpha_beta.py  global_phospho_model.py  io.py  jacspeedup.py  lossfn.py  model_ivp.py  models.py  network.py  optproblem.py  optuna_solver.py  params.py  refine.py  runner.py  scan.py  scan_lambdas.py  sensitivity.py  simulate.py  solvers.py  steadystate.py  test.py  utils.py
js/: katex-setup.js
kinopt/: README.md
knockout/: README.md  __init__.py  helper.py
models/: README.md  __init__.py  distmod.py  ode_model.py  randmod.py  succmod.py  testmod.py  weights.py
optimality/: KKT.py
paramest/: README.md  adapest.py  core.py  normest.py  seqest.py  toggle.py
phoskintime/: __init__.py
phoskintime_global/: __init__.py  analysis.py  buildmat.py  cache.py  config.py  config.toml  export.py  io.py  jacspeedup.py  lossfn.py  models.py  network.py  optproblem.py  params.py  refine.py  runner.py  simulate.py  solvers.py  steadystate.py  utils.py
plotting/: README.md  plotting.py
processing/: README.md  cleanup.py  map.py  postoptmerge.py  reduce.py
scripts/: analyze_tf_kin_counts.py  compare_estimated_model_simulations_thermal_standard.py  compare_mechanisms.py  compare_model_simulations_thermal_standard.py  curve_similarity.py  export_subnetworks.py  find_protein_accumulators.py  kinopt_network_readout.py  kinopt_network_viz.py  make_kinopt_diagram.py  mechanistic_insights.py  reconstruct_global_gof.py  temporal_sensitivity.py  tfopt_network_readout.py  tfopt_network_viz.py  thermal_distributive_model_protein.py
search/: search_index.json
sensitivity/: README.md  __init__.py  analysis.py
steady/: README.md  __init__.py  initdist.py  initrand.py  initsucc.py  inittest.py
steadystate/: initdist.py  initrand.py  initsucc.py
styles/: overrides.css
tests/: conftest.py  test_config.py  test_distmod.py  test_estimation.py  test_io_utils.py  test_ode_model.py  test_plotting.py  test_randmod.py  test_steady.py  test_succmod.py
tfopt/: README.md  tf_de.py  tf_slsqp.py
utils/: README.md  display.py  io_utils.py  latexit.py  tables.py  utils.py
(+170 files in other folders)
