[tool.poetry]
name = "phoskintime"
version = "0.1.0"
description = "ODE-based modeling of phosphorylation and transcriptional time dynamics"
authors = ["Abhinav Mishra <mishraabhinav36@gmail.com>"]
packages = [{ include = "bin" }, { include = "config" }, { include = "paramest" }, { include = "models" }, { include = "plotting" }, { include = "utils" }, { include = "steady" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
matplotlib = "*"
scipy = "*"
plotly = "*"
openpyxl = "*"
scikit-learn = "*"
tqdm = "*"
numba = "*"
XlsxWriter = "*"
statsmodels = "*"
pymoo = '*'
adjusttext = '*'
salib = '*'
graphviz = '*'
mygene = '*'
python-dotenv = "*"
cobyqa = '*'

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
phoskintime = "bin.main:main"