[tool.poetry]
name = "phoskintime"
version = "0.1.0"
description = "PhosKinTime Global: ODE-based phosphorylation + TF time-series fitting with multi-objective optimization."
authors = ["Abhinav Mishra <mishraabhinav36@gmail.com>"]
license = "BSD-3-Clause"
homepage = "https://bibymaths.github.io/phoskintime/"
repository = "https://github.com/bibymaths/phoskintime"
documentation = "https://bibymaths.github.io/phoskintime/"
keywords = [
    "phosphorylation",
    "ODE",
    "time-series",
    "kinetics",
    "parameter-estimation",
    "sensitivity-analysis",
    "systems-biology",
    "LC-MS",
    "modeling",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

packages = [{ include = "phoskintime_global" }]

include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "*"
pandas = "*"
seaborn = "*"
matplotlib = "*"
scipy = "*"
plotly = "*"
openpyxl = "*"
scikit-learn = "*"
tqdm = "*"
numba = "*"
XlsxWriter = "*"
statsmodels = "*"
pymoo = "*"
adjusttext = "*"
salib = "*"
graphviz = "*"
mygene = "*"
python-dotenv = "*"
cobyqa = "*"
typer = "*"
py2cytoscape = "*"
jinja2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
phoskintime-global = "phoskintime_global.runner:main"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"